[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Discourse.gd" type="Script" id=1]
[ext_resource path="res://Instances/DiscourseCharacter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/ModernDOS9x16.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "FlavorTextIdle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FlavorText:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.6, 3 ),
"transitions": PoolRealArray( 1, 0.00248936, 1, 1 ),
"update": 0,
"values": [ 247.0, -3.0, 497, 247.0 ]
}

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
mouse_filter = 2
color = Color( 0.0470588, 0.0745098, 0.137255, 1 )

[node name="DiscourseCharacter" parent="." instance=ExtResource( 2 )]

[node name="FlavorText" type="Label" parent="."]
margin_left = 3.0
margin_top = 247.0
margin_right = 156.0
margin_bottom = 349.667
rect_rotation = -90.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.168627, 0.270588, 0.501961, 0.392157 )
text = "CONVERSATION TIME"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "FlavorTextIdle"
playback_speed = 0.3
anims/FlavorTextIdle = SubResource( 2 )
